5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1671_1880.log
== TEST (2019-04-28 18:37:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio"):
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- ERROR:
File "XXXX", line 12
    print("maio"):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:38:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio"):
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- ERROR:
File "XXXX", line 12
    print("maio"):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:38:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio"):
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- ERROR:
File "XXXX", line 12
    print("maio"):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:38:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:38:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:38:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:38:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- EXECUTION TIME:
0.192367
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:38:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:38:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:38:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:38:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:38:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:38:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:39:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:39:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:39:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:39:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:39:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:39:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:39:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:39:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:40:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero de mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:40:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("favereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.151229
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
